# web

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: dns.rs  http.rs  main.rs  tcp.rs  udp.rs
common/async-executor/: Cargo.toml
common/async-executor/src/: lib.rs
common/debug-impl/: Cargo.toml
common/debug-impl/src/: lib.rs
common/dyn-error/: Cargo.toml
common/dyn-error/src/: lib.rs
common/otel-mrt/: Cargo.toml
common/otel-mrt/src/: exporter.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
common/protocols/: Cargo.toml
common/protocols/src/: buffered.rs  ice.rs  lib.rs  rss.rs  sdp.rs  stun.rs  tcp.rs  tls.rs  turn.rs
common/protocols/src/builder/: client.rs  client_async.rs  mod.rs  server.rs  server_async.rs
common/protocols/src/dns/: impls.rs  mod.rs  records.rs  traits.rs  wire.rs  zone.rs
common/protocols/src/grpc/: mod.rs  traits.rs
common/protocols/src/http/: headers.rs  impls.rs  mod.rs  qpack.rs  traits.rs  v1.rs  v3.rs
common/protocols/src/imf/: headers.rs  mod.rs
common/protocols/src/ldap/: ber.rs  builder.rs  impls.rs  mod.rs  traits.rs  wire.rs
common/protocols/src/otlp/: common.rs  logging.rs  metrics.rs  mod.rs  resource.rs  tracing.rs
common/protocols/src/protobuf/: de.rs  mod.rs  ser.rs
common/protocols/src/quic/: mod.rs  wire.rs
common/protocols/src/rtcp/: mod.rs
common/protocols/src/rtp/: mod.rs
common/protocols/src/rtsp/: headers.rs  impls.rs  mod.rs  traits.rs
common/protocols/src/sasl/: mod.rs  scram.rs
common/protocols/src/smtp/: impls.rs  mod.rs  traits.rs  wire.rs
common/protocols/src/utils/: connection.rs  headers.rs  mod.rs  pipe.rs  ring_buffer.rs  scheduler.rs  unstable.rs
common/protocols/src/ws/: impls.rs  mod.rs  traits.rs  wire.rs
common/quote-html/: Cargo.toml
common/quote-html/src/: lib.rs
common/serde-dyn-repr/: Cargo.toml
common/serde-dyn-repr/src/: lib.rs
common/stdout-log/: Cargo.toml
common/stdout-log/src/: lib.rs
db/console-backend/: Cargo.toml
db/console-frontend/: Cargo.toml
db/driver/: Cargo.toml
db/driver/src/: lib.rs  query.rs  terms.rs  wire.rs
db/grafana-datasource-backend/: Cargo.toml
db/grafana-datasource-backend/src/: main.rs
db/grafana-datasource-frontend/: package.json
db/grafana-datasource-frontend/src/: ConfigEditor.tsx  QueryEditor.tsx  plugin.json  types.ts
db/node/: Cargo.toml
db/node/docs/: api.proto  home.md
db/node/src/: lib.rs  topology.rs
db/node/src/log/: mod.rs
db/node/src/query/: executor.rs  metadata.rs  mod.rs  rawops.rs  terms.rs
db/node/src/recov/: mod.rs
db/node/src/service/: mod.rs
db/node/src/startup/: mod.rs
db/node/src/storage/: block.rs  btree.rs  column.rs  mod.rs  row.rs  version.rs
router/api/: Cargo.toml
router/api-controller/: Cargo.toml
router/api-controller/src/: lib.rs
router/console-backend/: Cargo.toml
router/console-frontend/: Cargo.toml
router/db-bridge/: Cargo.toml
router/node/: Cargo.toml
router/node/docs/: home.md
router/node/src/: ctx.rs  lib.rs  main.rs
router/node/src/builtins/: api.rs  auth.rs  balancer.rs  cache.rs  mod.rs  relay.rs  router.rs  socket.rs  storage.rs
router/node/src/global/: console.rs  mod.rs  telemetry.rs  watcher.rs
router/node/src/utils/: mod.rs  serde.rs  trie.rs
