[package]
name         = "kranus-cli"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.58"
repository   = "https://gitlab.com/TobiP64/kranus"
license      = "MIT"
description  = ""

[dependencies]
log              = "^0.4"
kranus-protocols = { path = "../common/protocols", features = ["sasl-scram"] }
