[package]
name        = "debug-impl"
version     = "0.1.0"
authors     = ["Tobias Pfeiffer <tobias@tobiaspfeiffer.net>"]
edition     = "2018"
publish     = false
repository  = "https://gitlab.com/TobiP64/rust-common"
license     = "MIT"
description = "A wrapper for non-debug structs, that implements `fmt::Debug`"