[package]
name         = "otel-mrt"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.58"
repository   = "https://gitlab.com/TobiP64/kranus"
license      = "MIT"
description  = "A minimal OpenTelemetry runtime"

[dependencies]
kranus-protocols = { path = "../protocols", features = ["smol"] }
smol             = "^1.2"
log              = "^0.4"
serde_json       = "^1.0"
concurrent-queue = "^1.2"
