[package]
name         = "kranus-protocols"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.60"
repository   = ""
license      = "MIT"
description  = "Implementation of common internet protocols, such as HTTP, SMTP and DNS"

[lib]
doctest = false

[features]
sasl-scram   = ["rand", "digest", "hmac", "pbkdf2", "stringprep"]

[dependencies]
futures-lite = "^1.12"
memchr       = "^2.4"
base64       = "^0.11"
chrono       = "^0.4"
log          = "^0.4"
rustls       = "^0.20"
async-rustls = "^0.2"
webpki       = "^0.22"
serde        = { version = "^1.0", features = ["derive"] }
smol         = { version = "^1.2", optional = true }
concurrent-queue = "^1.2"
# SASL-SCRAM
rand         = { version = "^0.7", optional = true }
digest       = { version = "^0.9", optional = true }
hmac         = { version = "^0.10", optional = true }
pbkdf2       = { version = "^0.7", optional = true }
stringprep   = { version = "^0.1", optional = true }
