[package]
name         = "kranus-db-driver"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.58"
repository   = "https://gitlab.com/TobiP64/kranus"
license      = "MIT"
description  = ""

[features]
async = ["smol"]

[dependencies]
uuid     = "^1.0"
kranus-protocols = { path = "../../common/protocols" }
smol             = { version = "1.3.0", optional = true }