[package]
name         = "kranus-db-node"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.58"
repository   = "https://gitlab.com/TobiP64/kranus"
license      = "MIT"
description  = ""

[dependencies]
kranus-protocols = { path = "../../common/protocols" }
wasmer           = "^2.3"
wasmer-compiler-llvm = "^2.3"
nix              = "^0.24"
log              = "^0.4"
smol             = "^1.2"
async-std        = { version = "^1.10", default-features = false, features = [] }
uuid             = "^1.1"
xxhash-rust = { version = "^0.8", feaures = ["xxh3", "const_xxh3"] }