[package]
name         = "kranus-router-node"
version      = "0.1.0"
authors      = ["Tobias Pfeiffer <tobias.pfeiffer@3d7eed74.net>"]
edition      = "2021"
rust-version = "1.58"
repository   = "https://gitlab.com/TobiP64/kranus"
license      = "MIT"
description  = "A router/proxy, that can also be configured as a web server"

[features]
default        = ["regex", "hot-reload"]
hot-reload     = ["notify"]
wasm-runtime   = ["wasmer-runtime"]
http-etag-sha3 = ["sha3"]
http-etag-xxh3 = ["xxhash-rust"]
http-etag-ar2i = ["rust-argon2"]
http-etag-ar2d = ["rust-argon2"]

[dependencies]
kranus-protocols   = { path = "../../common/protocols", features = ["smol"] }
otel-mrt           = { path = "../../common/otel-mrt" }
async-executor     = { path = "../../common/async-executor" }
stdout-log         = { path = "../../common/stdout-log" }
dyn-error          = { path = "../../common/dyn-error" }
serde-dyn-repr     = { path = "../../common/serde-dyn-repr" }
log                = "^0.4"
libloading         = "^0.7"
smol               = "^1.2"
async-recursion    = "^0.3"
async-std          = { version = "^1.10", default-features = false, features = [] }
rustls-pemfile     = "^0.2"
# extended rules/filters
regex              = { version = "^1.5", optional = true }
# config parsing
serde              = { version = "^1.0", features = ["derive"] }
erased-serde       = "^0.3"
toml               = "^0.5"
serde_yaml         = "^0.8"
# hot reloading
notify             = { version = "^4.0", optional = true }
# WASM runtime
wasmer-runtime     = { version = "^1.0", optional = true }
# HTTP caching/auth
chrono             = "^0.4"
hex                = "^0.4"
base64             = "^0.13"
sha3               = { version = "^0.9", optional = true }
xxhash-rust        = { version = "^0.8", features = ["xxh3"], optional = true }
rust-argon2        = { version = "^0.8", optional = true }
